--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "Tuomas Pöyry <@munkkeli>",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.14.37",
-    "@types/pg": "^7.14.11"
+    "@types/node": "^14.14.37"
   }
 }
